force-app/main/default/objects/Action__c/fields/Action_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Action_Frequency__c</fullName>
    <description>How often the action should be applied</description>
    <label>Action Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Action_Frequencies</valueSetName>
    </valueSet>
</CustomField>