force-app/main/default/objects/Action__c/fields/Score_Type__c.field-meta.xml
<CustomField>
    <fullName>Score_Type__c</fullName>
    <label>Score Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>